###################
Nagios Change Log
###################


1.3 - ??/??/2004
----------------
* Notification bug fix for volatile services
* Embedded Perl bug fix in mini_epn


1.2 - 02/02/2004
----------------
* Host stalking bug fix
* Embedded Perl bug fix
* Configure script patch for Solaris (iconv library)
* Bug fix for segfault in passive check routines
* Bug fix in service retention logic
* Bug fix in retention logic affecting passive service checks and
  event handlers (program-wide basis)
* Segfault fix in debug mode
* Fix for popup window in statusmap CGI
* CGI bug fixes (tac, statusmap, histogram, trends)
* HTML fixes
* Notification logic fix
* Fix for race condition when closing command file


1.1 - 06/02/2003
----------------
* File descriptor leak in file-based performance routines
* Timestamp fix for PostgreSQL 7.3
* Minor bug fixes to cmd and history CGIs
* Minor documentation fixes


1.0 - 11/24/2002
----------------
* Minor bug fixes in CGIs
* Minor bug fixes in sample config files
* Minor doc updates
* Minor bug fixes to init script
* Spec file updates
* Bug fix for flex host downtime
* Embedded perl bug fixe for arguments with spaces
* Host escalation logic fix
* Bug fix for PostgreSQL timestamps


1.0b6 - 09/15/2002
------------------
* Added wildcards and multiple hosts/hostgroups to host dependency
  and service dependency definitions
* Added wildcard support for members directive in hostgroup definitions
* Minor bug fixes and cleanups in CGIs
* Minor cleanups in the core
* Makefile fixes
* New version of snprintf() included that supports %f
* Notification interval for escalations now defaults to non-escalated value


1.0b5 - 08/12/2002
------------------
* Fixed another memory leak related to processing of passive checks
* Init script mods (killproc doesn't colllide with RedHat's killproc)
* Added minimalistic sample object config file (minimal.cfg)
* Memory leak fixes in the CGIs
* Minor interface changes to the status and TAC CGIs